objects/CMPL123CME__MEDDEV__c.object
<CustomObject>
    <fields>
        <fullName>BMX_Approve_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approve Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MEDDEV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Approve_Done_On__c</fullName>
        <label>Approve Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MEDDEV1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Done_On__c</fullName>
        <label>Cancel Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Not_Locally_Reporting_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close - Not Locally Reporting Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MEDDEV2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Not_Locally_Reporting_Done_On__c</fullName>
        <label>Close - Not Locally Reporting Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Report_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close Report Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MEDDEV3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Report_Done_On__c</fullName>
        <label>Close Report Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Country_Name__c</fullName>
        <formula>BMX_Reportable_Country__r.CMPL123CME__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reportable Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Date_of_Submission__c</fullName>
        <label>Date of Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Days_in_Pending_Response__c</fullName>
        <formula>MFLOOR(NOW()- BMX_Pending_Response_From__c)</formula>
        <label>Days in Pending Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMX_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Assessment_Decision__c</fullName>
        <description>US-AER-047</description>
        <formula>If( Local_Assessment__r.RecordType.DeveloperName  = 'Local_Assessment', 
    TEXT( Local_Assessment__r.BMX_Is_Reportable__c) , '' )</formula>
        <label>Local Assessment Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Subsidiary_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Subsidiary Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MEDDEV6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Subsidiary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Subsidiary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MEDDEV8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Pending_Response_From__c</fullName>
        <formula>IF( CMPL123_WF_Status__c ='Pending Response',CMPL123_WF_Action_Performed_On__c, null)</formula>
        <label>Pending Response From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Reportable_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reportable Country</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select the Country</errorMessage>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>COUNTRY CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>MEDDEV</relationshipLabel>
        <relationshipName>MEDDEV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rework Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MEDDEV7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Done_On__c</fullName>
        <label>Rework Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_Report_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit Report Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MEDDEV5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_Report_Done_On__c</fullName>
        <label>Submit Report Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit for Review Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MEDDEV4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_On__c</fullName>
        <label>Submit for Review Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Time_to_Notify_the_CA__c</fullName>
        <formula>IF( ISBLANK(BMX_Approved_Date__c), '',
TEXT(DATEVALUE(BMX_Approved_Date__c) - CMPL123CME__Complaint__r.BMX_Customer_Contact_Date__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Notify the CA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__AE_Cause_Codes__c</fullName>
        <label>AE Cause Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__AE_Codes__c</fullName>
        <label>AE Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__AE_FDA_Term__c</fullName>
        <label>AE FDA Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Accessories__c</fullName>
        <description>Accessories / associated devices</description>
        <inlineHelpText>Accessories / associated devices (if applicable)</inlineHelpText>
        <label>Accessories / associated devices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Address_of_National_Competent_Authority__c</fullName>
        <description>Address of National Competent Authority</description>
        <inlineHelpText>Address of National Competent Authority</inlineHelpText>
        <label>NCA Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Age_Units__c</fullName>
        <label>Age Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__AuthorisedRepresentativeCountry__c</fullName>
        <description>Authorised Representative Country</description>
        <inlineHelpText>Authorised Representative Country</inlineHelpText>
        <label>Authorised Rep Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Address__c</fullName>
        <description>Authorised Representative Address</description>
        <inlineHelpText>Authorised Representative Address</inlineHelpText>
        <label>Authorised Rep Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_City__c</fullName>
        <description>Authorised Representative City</description>
        <inlineHelpText>Authorised Representative City</inlineHelpText>
        <label>Authorised Rep City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Contact__c</fullName>
        <description>Authorised Representative Contact</description>
        <inlineHelpText>Authorised Representative Contact</inlineHelpText>
        <label>Authorised Rep Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Country__c</fullName>
        <description>Authorised Representative Country</description>
        <inlineHelpText>Authorised Representative Country</inlineHelpText>
        <label>Unused Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Email__c</fullName>
        <description>Authorised Representative Email</description>
        <inlineHelpText>Authorised Representative Email</inlineHelpText>
        <label>Authorised Rep E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Fax__c</fullName>
        <description>Authorised Representative Fax</description>
        <inlineHelpText>Authorised Representative Fax</inlineHelpText>
        <label>Authorised Rep Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Name__c</fullName>
        <description>Name of the Authorised Representative</description>
        <inlineHelpText>Name of the Authorised Representative</inlineHelpText>
        <label>Authorised Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Phone__c</fullName>
        <description>Authorised Representative Phone</description>
        <inlineHelpText>Authorised Representative Phone</inlineHelpText>
        <label>Authorised Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Postal_Code__c</fullName>
        <description>Authorised Representative Postal Code</description>
        <inlineHelpText>Authorised Representative Postal Code</inlineHelpText>
        <label>Authorised Rep Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Catalogue_Number__c</fullName>
        <description>Catalogue number</description>
        <inlineHelpText>Catalogue number</inlineHelpText>
        <label>Catalogue number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Classification_of_Incident__c</fullName>
        <description>Classification of incident</description>
        <inlineHelpText>Classification of incident</inlineHelpText>
        <label>Classification of incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Unanticipated Serious Deterioration in State of Health</fullName>
                </value>
                <value>
                    <fullName>All other reportable incidents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Clinical_Investigation_Name__c</fullName>
        <label>Clinical Investigation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Clinical_Investigation_Number__c</fullName>
        <label>Clinical Investigation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Comments__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Commercial_Name__c</fullName>
        <description>Commercial name/ brand name / make</description>
        <inlineHelpText>Commercial name/ brand name / make</inlineHelpText>
        <label>Commercial name/ brand name / make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Complaint</description>
        <inlineHelpText>Related Complaint</inlineHelpText>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>MEDDEV</relationshipLabel>
        <relationshipName>MEDDEV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Contact_Info__c</fullName>
        <label>Contact Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Contact_Person_in_Facility__c</fullName>
        <description>Contact person within the facility</description>
        <inlineHelpText>Contact person within the facility</inlineHelpText>
        <label>Healthcare Facility Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Countries_list__c</fullName>
        <description>Countries list</description>
        <inlineHelpText>Countries list</inlineHelpText>
        <label>Countries list</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>CMPL123CME__Medical_Device_Distributed_Countries__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CY</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LI</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Expiry_Date__c</fullName>
        <description>Device Expiry date</description>
        <inlineHelpText>Device Expiry date</inlineHelpText>
        <label>Device expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Mfr_Date__c</fullName>
        <description>Device Mfr Date</description>
        <inlineHelpText>Device Mfr Date</inlineHelpText>
        <label>Device Manufactured Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Duration_of_Implantation__c</fullName>
        <description>Duration of Implantation</description>
        <inlineHelpText>To be filled if the exact implant and explant dates are unknown</inlineHelpText>
        <label>Duration of Implantation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Event_Code__c</fullName>
        <label>Event Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Expected_Date_of_Next_Report__c</fullName>
        <description>Expected date of next report</description>
        <inlineHelpText>Expected date of next report</inlineHelpText>
        <label>Expected date of next report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Explant_Date__c</fullName>
        <description>Explant date</description>
        <inlineHelpText>Explant date</inlineHelpText>
        <label>Explant date (For implants only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__FDAReport__c</fullName>
        <label>FDA Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__FDA_Report__c</fullName>
        <label>FDA Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Final_Comments_of_Manufacturer__c</fullName>
        <description>Final comments from the manufacturer</description>
        <inlineHelpText>Final comments from the manufacturer</inlineHelpText>
        <label>Final comments from the manufacturer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Form_Language__c</fullName>
        <defaultValue>"en"</defaultValue>
        <label>Form Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Further_Investigations__c</fullName>
        <description>Further investigations</description>
        <inlineHelpText>Further investigations</inlineHelpText>
        <label>Further investigations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Gender__c</fullName>
        <description>Gender</description>
        <inlineHelpText>Gender</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__HealthCare_Address__c</fullName>
        <description>HealthCare Address</description>
        <inlineHelpText>HealthCare Address</inlineHelpText>
        <label>Healthcare Facility Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__HealthCare_City__c</fullName>
        <description>HelathCare City</description>
        <inlineHelpText>HelathCare City</inlineHelpText>
        <label>Healthcare Facility City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__HealthCare_Country__c</fullName>
        <description>HelathCare Country</description>
        <inlineHelpText>HelathCare Country</inlineHelpText>
        <label>Unused Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__HealthCare_Email__c</fullName>
        <description>HelathCare Email</description>
        <inlineHelpText>HelathCare Email</inlineHelpText>
        <label>Healthcare Facility E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__HealthCare_Fax__c</fullName>
        <description>HealthCare Fax</description>
        <inlineHelpText>HealthCare Fax</inlineHelpText>
        <label>Healthcare Facility Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__HealthCare_Phone__c</fullName>
        <description>HealthCare Phone</description>
        <inlineHelpText>HealthCare Phone</inlineHelpText>
        <label>Healthcare Facility Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__HealthCare_Postal_Code__c</fullName>
        <description>HealthCare Postal code</description>
        <inlineHelpText>HealthCare Postal code</inlineHelpText>
        <label>Healthcare Facility Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__HealthcareCountry__c</fullName>
        <description>Health care Country</description>
        <inlineHelpText>Healthcare Country</inlineHelpText>
        <label>Healthcare Facility Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Healthcare_Professional_Aware_Date__c</fullName>
        <label>Healthcare Professional Aware Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_Yes_State_ReportRef_and_Countries__c</fullName>
        <description>If yes, state in which countries and the report reference numbers of the incidents.</description>
        <inlineHelpText>If yes, state in which countries and the report reference numbers of the incidents.</inlineHelpText>
        <label>If yes, state report ref/countries(text)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_device_operator_is_others_specify__c</fullName>
        <description>If device operator is others, please specify name</description>
        <inlineHelpText>If device operator is others, please specify name</inlineHelpText>
        <label>If device operator is others, specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_status_of_submitter_is_others_specify__c</fullName>
        <label>If status of submitter is others,specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_usage_of_med_device_is_others_specify__c</fullName>
        <description>If usage of medical device is others, please specify</description>
        <inlineHelpText>If usage of medical device is others, please specify</inlineHelpText>
        <label>If usage of med device is others,specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_yes_state_report_ref_and_countries_LT__c</fullName>
        <description>If yes, state in which countries and the report reference numbers of the incidents.</description>
        <inlineHelpText>If yes, state in which countries and the report reference numbers of the incidents.</inlineHelpText>
        <label>If yes, state report ref and countries</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Implant_Date__c</fullName>
        <description>Implant date</description>
        <inlineHelpText>Implant date</inlineHelpText>
        <label>Implant date (For implants only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Incident_Date__c</fullName>
        <description>Date the incident occured</description>
        <inlineHelpText>Date the incident occured</inlineHelpText>
        <label>Date the incident occurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Incident_Description_Narrative__c</fullName>
        <description>Incident description narrative</description>
        <inlineHelpText>Incident description narrative</inlineHelpText>
        <label>Incident description narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Corrective_Preventive_Actions__c</fullName>
        <description>Initial corrective action/preventive actions implemented by the manufacturer</description>
        <inlineHelpText>Initial corrective action/preventive actions implemented by the manufacturer</inlineHelpText>
        <label>Initial CAPAs implemented by the Mfg.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Lot_Numbers__c</fullName>
        <description>Lot/batch number(s)</description>
        <inlineHelpText>Lot/batch number(s)</inlineHelpText>
        <label>Lot/batch number(s) (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>